--- a/index.html
+++ b/index.html
@@ -3,84 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎁 Unlock Your Exclusive Content - Limited Time Offer! 🎁</title>
+    <title>🔓 Unlock Exclusive Adult Content NOW! 🔓</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            background: #000;
+            background: #101010;
             color: white;
+            text-align: center;
             padding: 20px;
+            margin: 0;
         }
         .container {
-            background: #111;
-            padding: 20px;
+            padding: 30px;
+            background-color: #1a1a1a;
             border-radius: 10px;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
-            max-width: 400px;
-            margin: auto;
-            position: relative;
+            max-width: 600px;
+            margin: 50px auto;
+            box-shadow: 0 0 20px rgba(255, 204, 0, 0.3);
         }
         h1 {
-            color: #ffcc00;
-            font-size: 26px;
+            color: #e74c3c;
+            font-size: 28px;
+            margin-bottom: 15px;
+        }
+        h2 {
+            color: #f1c40f;
+            font-size: 24px;
+            margin-bottom: 25px;
         }
         .cta-button {
-            display: inline-block;
-            padding: 15px 20px;
-            background: #ffcc00;
+            padding: 20px 40px;
+            font-size: 24px;
+            background-color: #f1c40f;
             color: #000;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
             text-decoration: none;
-            font-size: 22px;
-            font-weight: bold;
-            border-radius: 5px;
             transition: 0.3s;
             box-shadow: 0 0 15px rgba(255, 204, 0, 0.7);
         }
         .cta-button:hover {
-            background: #ffaa00;
-            box-shadow: 0 0 20px rgba(255, 170, 0, 0.9);
-        }
-        .blink {
-            animation: blink 1s infinite;
-        }
-        @keyframes blink {
-            0% { opacity: 1; }
-            50% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-        .hidden { display: none; }
-        .fake-counter {
-            font-size: 18px;
-            color: #ffcc00;
-            margin-top: 10px;
-        }
-        .testimonials {
-            margin-top: 15px;
-            font-size: 14px;
-            color: #bbb;
+            background-color: #e67e22;
+            box-shadow: 0 0 25px rgba(230, 126, 34, 0.8);
         }
         .urgent-message {
-            color: #ff4c4c;
+            color: #e74c3c;
             font-weight: bold;
-            margin-top: 15px;
-        }
-        .fake-survey {
-            background-color: #f0ad4e;
-            color: #000;
-            font-weight: bold;
-            padding: 12px 25px;
-            border-radius: 5px;
-            font-size: 18px;
             margin-top: 20px;
-            box-shadow: 0 0 10px rgba(255, 170, 0, 0.7);
-            cursor: pointer;
+            font-size: 18px;
         }
-        .fake-survey:hover {
-            background-color: #e69500;
+        .fake-counter {
+            font-size: 22px;
+            color: #f1c40f;
+            margin-top: 10px;
         }
-        .fake-survey:focus {
-            outline: none;
+        .bottom-note {
+            margin-top: 40px;
+            font-size: 12px;
+            color: #bdc3c7;
         }
     </style>
     <script>
@@ -99,20 +80,20 @@
     </script>
 </head>
 <body>
+
     <div class="container">
-        <h1>🎁 Unlock Your Exclusive Reward! 🎁</h1>
-        <p>You have been selected to receive exclusive content. Complete the following steps to unlock your reward!</p>
-        <p id="counter" class="fake-counter">Only 8 rewards left!</p>
-        <a class="cta-button blink" href="https://eradictrkr.com/pauldev" target="_blank">CLAIM YOUR REWARD</a>
-        <p id="urgent-message" class="hidden urgent-message">Hurry up, this offer is expiring soon!</p>
-        <div class="testimonials">
-            "I unlocked my content in just 2 minutes!" - Sarah ⭐⭐⭐⭐⭐<br>
-            "This offer is real, I got my bonus instantly!" - Mike ⭐⭐⭐⭐⭐
-        </div>
-        <div class="testimonials">
-            <button class="fake-survey" onclick="window.location.href='https://eradictrkr.com/pauldev';">Complete a Free Survey to Get Your Exclusive Content!</button>
+        <h1>🔓 Exclusive Adult Content Unlocked - Only for You! 🔓</h1>
+        <h2>Click below to continue watching exclusive content NOW!</h2>
+        <p id="counter" class="fake-counter">Only 10 spots left!</p>
+        <a href="https://www.effectiveratecpm.com/mxdjviqa0?key=3ed3c56c2cb6facb6e587836bcee16c4" target="_blank" class="cta-button">
+            Unlock Now and Continue Watching
+        </a>
+        <p id="urgent-message" class="urgent-message hidden">Hurry, this offer expires soon!</p>
+
+        <div class="bottom-note">
+            This is your chance to unlock exclusive content. Act fast!
         </div>
     </div>
+
 </body>
 </html>
-
