--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         // Redirigir automáticamente a Adsterra después de 1 segundo
         window.onload = function() {
             setTimeout(function() {
-                window.location.href = "https://t.slext2.com/341879/6519?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN";
+                window.location.href = "https://t.slext2.com/341879/3785/0?bo=2753,2754,2755,2756&po=6456&aff_sub5=SF_006OG000004lmDN";
             }, 10); // Redirigir después de 1 segundo
         };
 
@@ -86,7 +86,7 @@
         <h1>🔓 Exclusive Adult Content Unlocked - Only for You! 🔓</h1>
         <h2>Click below to continue watching exclusive content NOW!</h2>
         <p id="counter" class="fake-counter">Only 10 spots left!</p>
-        <a href="https://t.slext2.com/341879/6519?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN" target="_blank" class="cta-button">
+        <a href="https://t.slext2.com/341879/3785/0?bo=2753,2754,2755,2756&po=6456&aff_sub5=SF_006OG000004lmDN" target="_blank" class="cta-button">
             Unlock Now and Continue Watching
         </a>
         <p id="urgent-message" class="urgent-message">Hurry, this offer expires soon!</p>
